<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_register"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:adjustViewBounds="true"
            android:src="@drawable/img_adidas_white" />

        <TextView
            android:id="@+id/txt_register_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp"
            tools:text="Lorem Ipsum Dolor Sit Amet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_default"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_register_fullname"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_user"
                android:tint="@color/icon" />

            <EditText
                android:id="@+id/edtxt_register_fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/icon"
                android:textColorHint="@color/inputColor"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_default"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_register_email"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_email"
                android:tint="@color/icon" />

            <EditText
                android:id="@+id/edtxt_register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/icon"
                android:textColorHint="@color/inputColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_default"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_register_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_phone"
                android:tint="@color/icon" />

            <EditText
                android:id="@+id/edtxt_register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/icon"
                android:textColorHint="@color/inputColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_default"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_register_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_password"
                android:tint="@color/icon" />

            <EditText
                android:id="@+id/edtxt_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/icon"
                android:textColorHint="@color/inputColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_default"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_register_retype"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_replay"
                android:tint="@color/icon" />

            <EditText
                android:id="@+id/edtxt_register_retype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/icon"
                android:textColorHint="@color/inputColor"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_default"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/icon"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_register_notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Have account? "
                android:textColor="@color/textColorPrimary"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/btn_register_viewlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/login"
                android:textColor="@color/textColorPrimary"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>