<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_login"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:adjustViewBounds="true"
                android:src="@drawable/img_adidas_white" />

            <TextView
                android:id="@+id/txt_login_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                tools:text="Lorem Ipsum Dolor Sit Amet" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/input_default"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_login_username"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_user"
                    android:tint="@color/icon" />

                <EditText
                    android:id="@+id/edtxt_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:textColor="@color/icon"
                    android:textColorHint="@color/inputColor"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_default"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_login_password"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_password"
                    android:tint="@color/icon" />

                <EditText
                    android:id="@+id/edtxt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:textColor="@color/icon"
                    android:textColorHint="@color/inputColor"
                    android:textSize="14sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/btn_default"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/icon"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_login_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Here? "
                    android:textColor="@color/textColorPrimary"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/btn_login_view_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="11sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>